--- a/app/views/pages/one.html.erb
+++ b/app/views/pages/one.html.erb
@@ -1,1 +1,14 @@
+
+<ul class="nav justify-content-center">
+  <li class="nav-item">
+    <%= link_to 'one', 'pages/one', class: 'nav-link' %>
+  </li>
+  <li class="nav-item">
+    <%= link_to 'two', 'two', class: 'nav-link' %>
+  </li>
+  <li class="nav-item">
+    <%= link_to 'three', 'three', class: 'nav-link' %>
+  </li>
+</ul>
+
 <h1>Fernanda Javiera Mora Caballero</h1>
