--- a/app/views/pages/one.html.erb
+++ b/app/views/pages/one.html.erb
@@ -4,10 +4,10 @@
     <%= link_to 'one', 'pages/one', class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to 'two', 'two', class: 'nav-link' %>
+    <%= link_to 'two', 'pages/two', class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to 'three', 'three', class: 'nav-link' %>
+    <%= link_to 'three', 'pages/three', class: 'nav-link' %>
   </li>
 </ul>
 
